Add a small application as test